--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,9 +1,28 @@
-{{ partial "header" . }}
-
-<h1>Hugo with Gulp, PostCSS and Webpack</h1>
-
-<p>
-  Hooray 🎉 - you've built this with <a href="https://github.com/netlify/victor-hugo">Victor-Hugo</a>!
-</p>
-
-{{ partial "footer" . }}
+<!DOCTYPE html><html lang="en"><head><title>Checkly</title><meta charset="utf-8"><meta name="description" content="test"><meta name="viewport" content="width=device-width" initial-scale="1" maximum-scale="1"><!-- main styles--><link rel="stylesheet" href="css/style.css"><!-- main scripts--><script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script><!-- Global site tag (gtag.js) - Google Analytics--><script async src="https://www.googletagmanager.com/gtag/js?id=UA-110523681-1"></script><script>if (location.host === 'checklyhq.com') {
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-110523681-1');
+  // Google Optimize
+  gtag('config', 'UA-110523681-1', { 'optimize_id': 'GTM-PNWRVST'});
+}</script><!-- Google Optimize Page hiding snippet (recommended)--><style>.async-hide { opacity: 0 !important}</style><script>if (location.host === 'checklyhq.com') {
+ (function(a,s,y,n,c,h,i,d,e){s.className+=' ' + y;h.start=1*new Date;
+ h.end=i = function () {
+   s.className = s.className.replace(RegExp(' ?' + y), '')
+ };
+ (a[n]=a[n] || []).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;
+ })(window,document.documentElement,'async-hide','dataLayer',4000,
+ {'GTM-PNWRVST':true});
+}</script><!-- Hotjar Tracking Code for https://checklyhq.com--><script>if (location.host === 'checklyhq.com') {
+ (function(h,o,t,j,a,r){
+ h.hj=h.hj || function () {
+   (h.hj.q = h.hj.q || []).push(arguments)
+ };
+ h._hjSettings={hjid: 717179, hjsv: 6};
+ a=o.getElementsByTagName('head')[0];
+ r=o.createElement('script');r.async=1;
+ r.src=t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+ a.appendChild(r);
+ })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+}</script><body><nav class="navbar navbar-toggleable-md"><div class="container"><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"><span></span><span></span><span></span></button><a class="navbar-brand" href="/"><img src="../../images/text_racoon_logo.svg" width="120"></a><div class="collapse navbar-collapse" id="navbarSupportedContent"><ul class="navbar-nav ml-auto"><li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a></li><li class="nav-item"><a class="nav-link" href="/support">Support</a></li></ul><form class="form-inline my-2 my-lg-0 ml-md-3"><a class="btn btn-outline-secondary my-2 my-sm-0 mr-3" href="https://app.checklyhq.com/login">Log in</a><a class="btn btn-primary my-2 my-sm-0" href="https://app.checklyhq.com/signup">Start a free trial</a></form></div></div></nav><div class="main"><div class="landing" id="landing"><section class="hero-section"><div class="container"><div class="row"><div class="col-sm-12 text-center"><h1 class="hero-text">Active monitoring <br> for dev and ops teams</h1></div></div><div class="row"><div class="col-sm-12 col-md-8 offset-md-2"><div class="text-center"><h2 class="hero-sub">Checkly is the easiest way to monitor your browser click flows and API responses
+from a single, simple dashboard.</h2></div></div></div><div class="row"><div class="col-sm-12"><div class="text-center"><a class="btn btn-primary btn-lg" href="https://app.checklyhq.com/signup">Start a free trial</a></div><div class="text-center pt-2 text-muted mb-5"><small>up and running in seconds - no credit card required</small></div></div></div><div class="row"><div class="col-sm-12"><div class="text-center"><img class="hero-image fade-up img-fluid" src="/images/dashboard-screen@2x.png"></div></div></div></div></section><!--include partials/browser-check-section.pug--><!--include partials/api-check-section.pug--><!--include partials/features-section.pug--><!--include partials/public-stats-section.pug--></div></div><!--include partials/footer.pug--><script src="js/app.js"><!--script(src=url_for("/js/landing.js"))--></script></body></head></html>
