WIP styling & content

--- a/src/layouts/partials/footer.pug
+++ b/src/layouts/partials/footer.pug
@@ -6,3 +6,4 @@ footer.footer
                 p
                     | Checkly · info@checklyhq.com · Paul-Lincke-Ufer 30, 10999, Berlin ·
                     a.ml-1(href='/privacy') Privacy
+script(src='/js/app.js')
