--- a/src/scss/_markdown.scss
+++ b/src/scss/_markdown.scss
@@ -1,5 +1,44 @@
 .markdown {
+
+  h1, h2 {
+    border-bottom: 1px solid $gray-light;
+    padding-bottom: .3em;
+  }
   h1 {
     font-size: 2rem;
+    margin-bottom: 2rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  h3 {
+    font-size: 1.35rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1rem;
+  }
+  p {
+    color: $gray-dark;
+    margin-bottom: 1rem;
+    word-wrap: break-word;
+  }
+
+  blockquote {
+    padding: 0 1em;
+    border-left: 0.25em solid $brand-primary;
+  }
+
+  pre {
+    padding: 1rem;
+    overflow: auto;
+    font-size: 85%;
+    font-weight: 600;
+    line-height: 1.45;
+    border-radius: $border-radius;
+    background-color: $gray-lighter;
+    margin-bottom: 1rem;
   }
 }
