--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-  padding: 1rem 2rem !important;
+  //padding: 1rem 2rem !important;
   min-height: 90px;
   transition: all .5s;
   z-index: 9999;
