--- a/src/layouts/index.pug
+++ b/src/layouts/index.pug
@@ -4,9 +4,9 @@ body
     .main
         #landing.landing
             include partials/hero-section.pug
-            //include partials/browser-check-section.pug
-            //include partials/api-check-section.pug
+            include partials/browser-check-section.pug
+            include partials/api-check-section.pug
             include partials/features-section.pug
-            //include partials/public-stats-section.pug
+            include partials/public-stats-section.pug
 
     include partials/footer.pug
