--- a/src/layouts/partials/head.pug
+++ b/src/layouts/partials/head.pug
@@ -8,6 +8,8 @@ html(lang='en')
 
         // main styles
         link(rel='stylesheet' href='/css/style.css')
+        link(rel="stylesheet" href='https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css')
+
 
         // main scripts
         script(src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous")
@@ -18,14 +20,13 @@ html(lang='en')
         // Global site tag (gtag.js) - Google Analytics
         script(async src="https://www.googletagmanager.com/gtag/js?id=UA-110523681-1")
         script
-            | if (location.host === 'checklyhq.com') {
             |   window.dataLayer = window.dataLayer || [];
             |   function gtag(){dataLayer.push(arguments);}
             |   gtag('js', new Date());
             |   gtag('config', 'UA-110523681-1');
             |   // Google Optimize
             |   gtag('config', 'UA-110523681-1', { 'optimize_id': 'GTM-PNWRVST'});
-            | }
+            |
 
 
         // Google Optimize Page hiding snippet (recommended)
