--- a/src/layouts/partials/hero-section.pug
+++ b/src/layouts/partials/hero-section.pug
@@ -18,4 +18,4 @@ section.hero-section
     .row
       .col-sm-12
         .text-center
-          img.hero-image.fade-up.img-fluid(src='/images/dashboard-screen@2x.png')
+          img.hero-image.img-fluid(src='/images/dashboard-screen@2x.png')
