--- a/src/layouts/partials/hero-section.pug
+++ b/src/layouts/partials/hero-section.pug
@@ -8,7 +8,7 @@ section.hero-section
         .text-center
           h2.hero-sub
             | Checkly is the easiest way to monitor your browser click flows and API responses
-            | from a single, simple dashboard.
+            | from a single dashboard.
     .row
       .col-sm-12
         .text-center
