--- a/src/layouts/index.pug
+++ b/src/layouts/index.pug
@@ -2,7 +2,7 @@ include  partials/head
 body
     include partials/navbar.pug
     .main
-        #landing.landing
+        #landing.landing(v-cloak)
             include partials/hero-section.pug
             include partials/browser-check-section.pug
             include partials/api-check-section.pug
