--- a/src/layouts/partials/head.pug
+++ b/src/layouts/partials/head.pug
@@ -1,19 +1,23 @@
 doctype html
 html(lang='en')
     head
-        title Checkly
+        title !{'{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | Checkly {{ end }}'}
         meta(charset='utf-8')
-        meta(name='description' content='test')
+        meta(name='description' content='{{.Description | default .Site.Params.Description}}')
         meta(name='viewport' content='width=device-width', initial-scale=1, maximum-scale=1, user-scalable=no)
+
+        meta(property='og:type' content='article')
+        meta(property='og:title' content='{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | Checkly {{ end }}')
+        meta(property='og:description' content='{{.Description | default .Site.Params.Description}}')
+        meta(property='og:image' content='https://checklyhq.com//images/dashboard-screen@2x.png')
+
+        meta(property='twitter:card' content='summary')
+        meta(property='twitter:title' content='{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | Checkly {{ end }}')
+        meta(property='twitter:description' content='{{.Description | default .Site.Params.Description}}')
+        meta(property='twitter:image' content='https://checklyhq.com//images/dashboard-screen@2x.png')
 
         // main styles
         link(rel='stylesheet' href='/css/style.css')
-
-        // main scripts
-        script(src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous")
-        script(src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous")
-        script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous")
-
 
         // Global site tag (gtag.js) - Google Analytics
         script(async src="https://www.googletagmanager.com/gtag/js?id=UA-110523681-1")
