--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -2,7 +2,7 @@ include  ../partials/head
 body
     include ../partials/navbar.pug
     .main
-        .plans
+        .plans.py-5
             .container
                 .row
                     .col-sm-12.plans-header
@@ -78,7 +78,7 @@ body
 
                 .row
                     .col-sm-12.text-center
-                        p.py-3 Don't see a plan that works for you? #[a( href='http://google.com' ) Contact us]
+                        p.py-3 Don't see a plan that works for you? Contact us at info@checklyhq.com
 
 
 
