adds fancy navbar

--- a/src/layouts/partials/footer.pug
+++ b/src/layouts/partials/footer.pug
@@ -38,6 +38,9 @@ footer.footer
         .row.footer-bottom
             .col-12
                 span Checkly · Paul-Lincke-Ufer 30, 10999, Berlin · Copyright © 2018
+                .float-right
+                    a(href='https://twitter.com/checklyhq' target='_blank')
+                        img(src='/images/twitter.svg')
 
 
 include scripts
