--- a/src/layouts/partials/head.pug
+++ b/src/layouts/partials/head.pug
@@ -16,6 +16,10 @@ html(lang='en')
         meta(property='twitter:description' content='{{.Description | default .Site.Params.Description}}')
         meta(property='twitter:image' content='https://checklyhq.com/images/dashboard-screen@2x.png')
 
+        link(rel='icon' type='image/png' href='/images/racoon_favicon.png')
+        link(rel='alternate' href='https://checklyhq.com' hreflang='en-us')
+        link(rel='canonical' href='https://checklyhq.com')
+
         // main styles
         link(rel='stylesheet' href='/css/style.css')
 
