--- a/src/layouts/partials/navbar.pug
+++ b/src/layouts/partials/navbar.pug
@@ -1,5 +1,5 @@
-.container.px-0
-    nav.navbar.navbar-toggleable-md.sticky
+nav.navbar.navbar-toggleable-md
+    .container.px-0
         button.navbar-toggler.navbar-toggler-right(type='button' data-toggle='collapse' data-target='#navbarSupportedContent')
           span
           span
