--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -32,7 +32,7 @@ body
                                                 td 8 regions
 
                                     .card-footer.text-center
-                                        button.btn.btn-success() Free 15-day trial
+                                        a.btn.btn-success(href='https://app.checklyhq.com/signup') Free 15-day trial
 
                                 // Growth
 
@@ -53,7 +53,7 @@ body
                                                 td 8 regions
 
                                     .card-footer.text-center
-                                        button.btn.btn-success() Free 15-day trial
+                                        a.btn.btn-success(href='https://app.checklyhq.com/signup') Free 15-day trial
 
                                 // Business
 
@@ -74,7 +74,7 @@ body
                                                 td 8 regions
 
                                     .card-footer.text-center
-                                        button.btn.btn-success() Free 15-day trial
+                                        a.btn.btn-success(href='https://app.checklyhq.com/signup') Free 15-day trial
 
                 .row
                     .col-sm-12.text-center
