--- a/src/layouts/docs/single.pug
+++ b/src/layouts/docs/single.pug
@@ -1,10 +1,10 @@
 include  ../partials/head
 body
     include ../partials/navbar.pug
-    .main.container
-        .row
-            .col-sm-3
-                aside
+    .main
+        .container
+            .row
+                .col-sm-3
                     ul.sidebar-menu
                         | !{'{{ $currentPage := . }}'}
                         | !{'{{ range .Site.Menus.docs }}'}
@@ -23,6 +23,6 @@ body
                     | !{'{{end}}'}
                     | !{'{{end}}'}
 
-            .col-sm-9
-                span.markdown #{'{{.Content}}'}
+                .col-sm-9
+                    span.markdown #{'{{.Content}}'}
     include ../partials/footer.pug
