--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,5 +1,6 @@
 .main {
-  min-height: calc(100vh - 196px - 90px); // full height - footer height - navbar height
+  padding: $spacer 0;
+  min-height: calc(100vh - 312px - 90px); // full height - footer height - navbar height
 }
 
 [v-cloak] {
