--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -2,6 +2,7 @@
   min-height: 90px;
   transition: all .5s;
   z-index: 9999;
+  background-color: $white;;
 
   .navbar-toggler {
     span {
@@ -27,6 +28,18 @@
     font-weight: 400;
     &:hover {
       color: $gray-dark;
+    }
+  }
+
+  &.navbar-fixed-drop-shadow {
+    box-shadow: 0 1px 2px 0px rgba(31, 45, 61, 0.15);
+    min-height: 70px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    .btn {
+      padding: 0.5rem .75rem;
     }
   }
 }
