--- a/src/layouts/partials/navbar.pug
+++ b/src/layouts/partials/navbar.pug
@@ -14,5 +14,5 @@ nav.navbar.navbar-toggleable-md
               a.nav-link(href='/docs') Docs
           form.form-inline.my-2.my-lg-0.ml-md-3
             a.btn.btn-outline-secondary.my-2.my-sm-0.mr-3(href='https://app.checklyhq.com/login') Log in
-            a.btn.btn-primary.my-2.my-sm-0(href='https://app.checklyhq.com/signup') Start a free trial
+            a.btn.btn-success.my-2.my-sm-0(href='https://app.checklyhq.com/signup') Start a free trial
 
