--- a/src/layouts/partials/features-section.pug
+++ b/src/layouts/partials/features-section.pug
@@ -10,12 +10,12 @@ section.features-section
             .feature-header
               span.btn-icon.mr-3 🔔
               | Alerting
-            p.feature-body Get alerted on failures and recoveries via email, Slack or webhooks.
+            p.feature-body Get alerted via email, Slack or webhooks.
           li(@click.prevent='selectedFeature = 2', :class='{ "feature-selected" : selectedFeature === 2 }')
             .feature-header 📈
               span.btn-icon.mr-3
               | Stats and metrics
-            p.feature-body Clear response time and up time stats. Aggregated and per data datacenter location.
+            p.feature-body Clear response time and up time stats per location.
           li(@click.prevent='selectedFeature = 3', :class='{ "feature-selected" : selectedFeature === 3 }')
             .feature-header
               span.btn-icon.mr-3 🔬
@@ -25,10 +25,9 @@ section.features-section
             .feature-header
               span.btn-icon.mr-3 🌎
               | Global coverage
-            p.feature-body Check your API's and browser transactions from up to eight datacenters at no extra cost.
+            p.feature-body Check your API's and browser transactions from up to eight datacenters.
       .col-sm-9(v-lazy-container='{ selector: "img" }')
         img.fade-in.screen-image.ml-lg-5(v-show='selectedFeature === 1', data-src='/images/alerts-screen@2x.png')
         img.fade-in.screen-image.ml-lg-5(v-show='selectedFeature === 2', data-src='/images/show-screen@2x.png')
         img.fade-in.screen-image.ml-lg-5(v-show='selectedFeature === 3', data-src='/images/result-detail-screen@2x.png')
         img.fade-in.screen-image.ml-lg-5(v-show='selectedFeature === 4', data-src='/images/locations-screen@2x.png')
-
