--- a/src/layouts/partials/hero-section.pug
+++ b/src/layouts/partials/hero-section.pug
@@ -12,7 +12,7 @@ section.hero-section
     .row
       .col-sm-12
         .text-center
-          a.btn.btn-primary.btn-lg(href='https://app.checklyhq.com/signup') Start a free trial
+          a.btn.btn-success.btn-lg(href='https://app.checklyhq.com/signup') Start a free trial
         .text-center.pt-2.text-muted.mb-4
           small up and running in seconds - no credit card required
     .row
