--- a/src/scss/_markdown.scss
+++ b/src/scss/_markdown.scss
@@ -21,7 +21,7 @@
     margin-bottom: 1rem;
   }
   p {
-    color: $gray-dark;
+    color: $body-color;
     margin-bottom: 1rem;
     word-wrap: break-word;
   }
