nicer free trial section

--- a/src/layouts/index.pug
+++ b/src/layouts/index.pug
@@ -8,5 +8,6 @@ body
             include partials/api-check-section.pug
             include partials/features-section.pug
             include partials/public-stats-section.pug
+            include partials/free-trial.pug
 
     include partials/footer.pug
