--- a/src/layouts/partials/hero-section.pug
+++ b/src/layouts/partials/hero-section.pug
@@ -7,7 +7,7 @@ section.hero-section
       .col-sm-12.col-md-8.offset-md-2
         .text-center
           h2.hero-sub
-            | Checkly is the easiest way to monitor your browser click flows and API responses
+            | Checkly is the easiest way to monitor your API's and Browser click flows
             | from a single dashboard.
     .row
       .col-sm-12
