--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -87,4 +87,5 @@ body
                     .col-sm-6.markdown.text-left #{'{{ . | markdownify }}'}
                     | !{'{{end}}'}
 
+    include ../partials/free-trial.pug
     include ../partials/footer.pug
