--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 @import 'navbar';
 @import 'sidebar-menu';
 @import 'landing';
+@import 'free-trial';
 @import 'footer';
 @import 'plans';
 @import 'markdown';
