--- a/src/layouts/partials/navbar.pug
+++ b/src/layouts/partials/navbar.pug
@@ -6,6 +6,7 @@ nav.navbar.navbar-toggleable-md
           span
         a.navbar-brand(href='/')
           img(src='/images/text_racoon_logo.svg', width='120')
+          p.beta beta!
         #navbarSupportedContent.collapse.navbar-collapse
           ul.navbar-nav.ml-auto
             li.nav-item
