--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -3,6 +3,15 @@
   transition: all .5s;
   z-index: 9999;
   background-color: $white;;
+  .beta {
+    font-size: 15px;
+    font-weight: $font-weight-bold;
+    margin-left: .5rem;
+    display: inline;
+    color: $pink;
+    line-height: 1.1rem;
+    vertical-align: text-bottom;
+  }
 
   .navbar-toggler {
     span {
