adds news section

--- a/src/layouts/partials/navbar.pug
+++ b/src/layouts/partials/navbar.pug
@@ -1,4 +1,4 @@
-nav.navbar.navbar-toggleable-md
+nav.navbar.navbar-toggleable-sm
     .container.px-0
         button.navbar-toggler.navbar-toggler-right(type='button' data-toggle='collapse' data-target='#navbarSupportedContent')
           span
@@ -13,7 +13,9 @@ nav.navbar.navbar-toggleable-md
               a.nav-link(href='/pricing') Pricing
             li.nav-item
               a.nav-link(href='/docs') Docs
+            li.nav-item
+              a.nav-link(href='/whats-new') What's new
           form.form-inline.my-2.my-lg-0.ml-md-3
-            a.btn.btn-outline-secondary.my-2.my-sm-0.mr-3(href='https://app.checklyhq.com/login') Log in
+            a.btn.btn-outline-secondary.my-2.my-sm-0.mr-3.ml-md-3(href='https://app.checklyhq.com/login') Log in
             a.btn.btn-success.my-2.my-sm-0(href='https://app.checklyhq.com/signup') Start a free trial
 
