--- a/src/layouts/partials/free-trial.pug
+++ b/src/layouts/partials/free-trial.pug
@@ -7,6 +7,6 @@ section.free-trial-section
                         .text-center
                             h2.section-header.pt-4 Try it out for free for 15 days
                             p.lead-text Start actively monitoring your API endpoints and browser click flows today.
-                            a.btn.btn-success.btn-lg(href='https://app.checklyhq.com/signup') Start free trial
+                            a.btn.btn-success.btn-lg(href='https://app.checklyhq.com/signup') Start a free trial
                             .pt-2.text-muted.mb-4
                                 small no credit card required
