--- a/src/scss/_dummy_variables.scss
+++ b/src/scss/_dummy_variables.scss
@@ -257,6 +257,7 @@ $font-size-lg:   1.25rem !default;
 $font-size-sm:   .875rem !default;
 $font-size-xs:   .75rem !default;
 
+$font-weight-light: 200;
 $font-weight-normal: normal !default;
 $font-weight-bold: bold !default;
 
