--- a/src/scss/_markdown.scss
+++ b/src/scss/_markdown.scss
@@ -1,7 +1,6 @@
 .markdown {
 
   h2, h3 {
-    border-bottom: 1px solid $gray-light;
     padding-bottom: .3em;
   }
   h1 {
@@ -13,12 +12,14 @@
     font-size: 1.5rem;
     margin-top: 1.5rem;
     margin-bottom: 1rem;
+    font-weight: $font-weight-light;
   }
 
   h3 {
     font-size: 1.35rem;
     margin-top: 1.5rem;
     margin-bottom: 1rem;
+    font-weight: $font-weight-light;
   }
   p {
     color: $body-color;
@@ -40,5 +41,13 @@
     border-radius: $border-radius;
     background-color: $gray-lighter;
     margin-bottom: 1rem;
+  }
+
+  ul {
+    padding-left: 1rem;
+  }
+
+  img {
+    max-width: 100%;
   }
 }
