--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,8 @@
 @import 'free-trial';
 @import 'footer';
 @import 'plans';
+@import 'docs';
+@import 'toc-sidebar';
 @import 'article';
 @import 'markdown';
 @import 'status-circle';
