--- a/src/layouts/docs/list.pug
+++ b/src/layouts/docs/list.pug
@@ -4,7 +4,7 @@ body
     .main
         .container
             .row
-                .col-sm-3
+                .col-sm-3.pl-0
                     ul.sidebar-menu
                         | !{'{{ $currentPage := . }}'}
                         | !{'{{ range .Site.Menus.docs }}'}
