--- a/src/scss/_markdown.scss
+++ b/src/scss/_markdown.scss
@@ -36,11 +36,13 @@
     padding: 1rem;
     overflow: auto;
     font-size: 85%;
-    font-weight: 600;
     line-height: 1.45;
     border-radius: $border-radius;
     background-color: $gray-lighter;
     margin-bottom: 1rem;
+    &.chroma {
+      background-color: #272822;
+    }
   }
 
   ul, ol {
