--- a/src/scss/_sidebar-menu.scss
+++ b/src/scss/_sidebar-menu.scss
@@ -12,7 +12,7 @@
     margin-bottom: .75rem;
     h3 {
       color: $gray-dark;
-      font-size: $font-size-base;
+      font-size: 17px;
       font-weight: 400;
       display: block;
       margin-top: 1rem;
