--- a/src/scss/_toc-sidebar.scss
+++ b/src/scss/_toc-sidebar.scss
@@ -1,8 +1,16 @@
 .toc-sidebar {
+
   position: relative;
   right: 0;
   padding-left: .5rem;
   font-size: $font-size-sm;
+
+  .toc-sidebar-header {
+    line-height: 1;
+    margin-bottom: $spacer;
+    font-weight: $font-weight-bold;
+  }
+
   ul, ol {
     list-style-type: none;
     padding-left: 0;
