--- a/src/layouts/docs/single.pug
+++ b/src/layouts/docs/single.pug
@@ -4,7 +4,7 @@ body
     .main.docs
         .container
             .row
-                .col-sm-2.pl-0
+                .col-sm-3
                     ul.sidebar-menu
                         | !{'{{ $currentPage := . }}'}
                         | !{'{{ range .Site.Menus.docs }}'}
@@ -16,6 +16,10 @@ body
                                 | !{'{{ $has := $currentPage.IsMenuCurrent "docs" . }}'}
                                 li.sidebar-menu-sub-item(class='{{if $has}}active{{end}}')
                                     a(href="{{.URL}}") #{'{{.Name}}'}
+                                | !{'{{if $has}}'}
+                                .side-bar-menu-toc
+                                    span #{'{{ $currentPage.TableOfContents}}'}
+                                | !{'{{end}}'}
                                 | !{'{{end}}'}
                         | !{'{{else}}'}
                         li.sidebar-menu-item
@@ -23,13 +27,10 @@ body
                     | !{'{{end}}'}
                     | !{'{{end}}'}
 
-                .col-sm-8
-                    .markdown
+                .col-sm-7
+                    .markdown.py-3
                         h1 #{'{{ .Title }}'}
                         span #{'{{.Content}}'}
                     hr.my-4
                     p Last updated on #{'{{.Page.Lastmod.Format '} "January 2, 2006" #{' }}'}
-
-                .col-sm-2.pr-0
-                    include ../partials/toc-sidebar.pug
     include ../partials/footer.pug
