--- a/src/layouts/partials/navbar.pug
+++ b/src/layouts/partials/navbar.pug
@@ -1,4 +1,4 @@
-nav.navbar.navbar-toggleable-sm
+nav.navbar.navbar-toggleable-sm.fixed-top
     .container.px-0
         button.navbar-toggler.navbar-toggler-right(type='button' data-toggle='collapse' data-target='#navbarSupportedContent')
           span
