--- a/src/scss/_markdown.scss
+++ b/src/scss/_markdown.scss
@@ -12,7 +12,7 @@
     font-size: 1.5rem;
     margin-top: 1.5rem;
     margin-bottom: 1rem;
-    font-weight: $font-weight-light;
+    font-weight: 400;
   }
 
   h3 {
@@ -28,21 +28,25 @@
   }
 
   blockquote {
-    padding: 0em 1em;
+    padding: 0 1em;
     border-left: 0.25em solid $brand-primary;
   }
 
   pre {
     padding: 1rem;
     overflow: auto;
-    font-size: 85%;
+    font-size: $font-size-sm;
     line-height: 1.45;
     border-radius: $border-radius;
     background-color: $gray-lighter;
-    margin-bottom: 1rem;
+    margin: 2rem 0;
     &.chroma {
       background-color: #272822;
     }
+  }
+
+  strong {
+    font-weight: 500;
   }
 
   ul, ol {
