--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -2,7 +2,8 @@
   min-height: 90px;
   transition: all .5s;
   z-index: 9999;
-  background-color: $white;;
+  background-color: $white;
+
   .beta {
     font-size: 15px;
     font-weight: $font-weight-bold;
@@ -41,7 +42,7 @@
 
   &.navbar-fixed-drop-shadow {
     box-shadow: 0 1px 2px 0px rgba(31, 45, 61, 0.15);
-    min-height: 70px;
+    min-height: 60px;
     position: fixed;
     top: 0;
     right: 0;
