--- a/src/scss/_markdown.scss
+++ b/src/scss/_markdown.scss
@@ -56,4 +56,13 @@
   img {
     max-width: 100%;
   }
+
+  *[id]:before {
+    display: block;
+    content: " ";
+    margin-top: -90px;
+    height: 90px;
+    visibility: hidden;
+  }
+
 }
