--- a/src/scss/_sidebar-menu.scss
+++ b/src/scss/_sidebar-menu.scss
@@ -1,5 +1,9 @@
 .sidebar-menu {
-  position: fixed;
+
+  @include media-breakpoint-up(sm) {
+    position: fixed;
+  }
+
   a {
     color: $gray;
     &.active {
