update pricing copy

--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -30,6 +30,10 @@ body
                                                 td 5 Browser checks
                                             tr
                                                 td 8 regions
+                                            tr
+                                                td 5 minute schedules
+                                            tr
+                                                td Email, webhook and <br> Slack integration
 
                                     .card-footer.text-center
                                         a.btn.btn-success(href='https://app.checklyhq.com/signup') Free 15-day trial
@@ -51,6 +55,10 @@ body
                                                 td 15 Browser checks
                                             tr
                                                 td 8 regions
+                                            tr
+                                                td 5 minute schedules
+                                            tr
+                                                td Email, webhook and <br> Slack integration
 
                                     .card-footer.text-center
                                         a.btn.btn-success(href='https://app.checklyhq.com/signup') Free 15-day trial
@@ -72,6 +80,10 @@ body
                                                 td 30 Browser checks
                                             tr
                                                 td 8 regions
+                                            tr
+                                                td 5 minute schedules
+                                            tr
+                                                td Email, webhook and <br> Slack integration
 
                                     .card-footer.text-center
                                         a.btn.btn-success(href='https://app.checklyhq.com/signup') Free 15-day trial
