--- a/src/layouts/partials/browser-check-section.pug
+++ b/src/layouts/partials/browser-check-section.pug
@@ -10,7 +10,7 @@ section.browser-checks-section
           | Check your most crucial user flows every 5 minutes.
     .row
       .col-sm-12.text-center.mb-4
-        //a.info-link(href='#faq') Wait, how does this work?
+        a.info-link(href='/docs/browser-checks/quickstart/') Wait, how does this work?
     .row.mb-2
       .col-sm-12.text-center
         form.form
