--- a/src/scss/_landing.scss
+++ b/src/scss/_landing.scss
@@ -180,7 +180,7 @@ p {
       }
 
       li {
-        padding: 1rem;
+        padding: 1.5rem 2rem;
         border-radius: $border-radius;
         &:hover {
           cursor: pointer;
@@ -190,10 +190,13 @@ p {
               color: $brand-primary;
             }
           }
+          .feature-body {
+            color: $body-color;
+          }
         }
 
         &.feature-selected {
-
+          background-color: $gray-lightest;
           .feature-header {
             color: $brand-primary;
             .btn-icon {
@@ -252,14 +255,6 @@ p {
   .faq-section {
     padding-top: 2 * $section-top-padding;
     padding-bottom: $section-bottom-padding;
-
-    .github-box {
-      @include drop-shadow();
-      padding: 2 * $spacer;
-      background-color: $white;
-      border-radius: 4px;
-      border: 1px solid $gray-light;
-    }
   }
 }
 
