--- a/src/scss/_sidebar-menu.scss
+++ b/src/scss/_sidebar-menu.scss
@@ -44,7 +44,7 @@
       &.active {
         a {
           color: $brand-primary;
-          font-weight: $font-weight-bold;
+          font-weight: 400;
         }
       }
     }
