adds docs on timeouts

--- a/src/scss/_markdown.scss
+++ b/src/scss/_markdown.scss
@@ -65,4 +65,13 @@
     visibility: hidden;
   }
 
+  code {
+    border: 1px solid $gray-light;
+  }
+
+  pre {
+    code {
+      border: none;
+    }
+  }
 }
