many changes & adds heap badge

--- a/src/layouts/partials/footer.pug
+++ b/src/layouts/partials/footer.pug
@@ -39,8 +39,9 @@ footer.footer
             .col-12
                 span Checkly · Paul-Lincke-Ufer 30, 10999, Berlin · Copyright © 2018
                 .float-right
+                    a.mr-3(href="https://heapanalytics.com/?utm_source=badge" rel="nofollow")
+                        img(style="width:108px;height:41px" src="//heapanalytics.com/img/badgeLight.png" alt="Heap | Mobile and Web Analytics")
                     a(href='https://twitter.com/checklyhq' target='_blank')
                         img(src='/images/twitter.svg')
-
 
 include scripts
