update 404 and maintenance page

--- a/src/layouts/404.pug
+++ b/src/layouts/404.pug
@@ -4,7 +4,7 @@ body
     .main
         .container
             .row
-                .col-sm-12
-                    h1 Whoops, that page does not exist
-
+                .col-sm-12.text-center
+                    h1.pt-5 404
+                    h2.py-5.text-muted Whoops, that page does not exist!
     include partials/footer.pug
