tweak maintenance page

--- a/src/layouts/maintenance/list.pug
+++ b/src/layouts/maintenance/list.pug
@@ -4,6 +4,6 @@ body
     .main
         .container
             .row
-                .col-sm-12.text-center
-                    span.markdown.py-5 #{'{{.Content}}'}
+                .col-sm-12.text-center.py-5
+                    span #{'{{.Content}}'}
     include ../partials/footer
